--- a/public/css/app-main.css
+++ b/public/css/app-main.css
@@ -738,27 +738,37 @@ a.btn-exp:hover {
   
 }
 
+
 .filter-box {
   float: right;
   position:absolute;
   right: -100px;
   top: -79;
+  z-index: 100;
+}
+
+.filter-box li.title  i {
+  /* color: white; */
+}
+
+.filter-box li i {
+ /* color: blue; */
 }
 
 .filter-box.open {
   margin: 0px;
-  background-color: antiquewhite;
-  padding: 20px;
+  padding: 0px;
   border: 2px solid black;
   border-radius: 7px;
   text-align: center;
+  background-color: white;
 
 }
 
 .filter-box button {
   margin: 0px auto;
   margin-bottom: 10px;
-  width: 100px;
+  /* width: 100px; */
 }
 
 .filter-box ul {
@@ -767,12 +777,48 @@ a.btn-exp:hover {
 }
 
 .filter-box li {
-  margin-bottom: 17px;
+  margin-bottom: 2px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.filter-box li label {
+  display: inline-block;
+  width: 85%;
+  height: 110%;
+  border: 0px;
+}
+
+.filter-box li input[type="checkbox"] {
+  margin-left: 8px;
+}
+
+.filter-box select {
+  display: inline-block;  
+}
+
+.filter-box ul #lic {
+  width: 75%;
+  margin-right: 10px;
 }
 
 .filter-box #limit {
-  display: inline-block;
   width: 60px;
   margin-left: 15px;
+}
+
+.filter-box .title .close {
+  width: 30px;
+  color:  white;
+  opacity: 0.8;
+  position: relative;
+  top: -2px;
+  right: 0px;
+}
+
+.filter-box .title {
+  margin: 0px;
+  padding: 4px;
+  margin-bottom: 8px;
 }
 
