--- a/public/pells/css/pells.css
+++ b/public/pells/css/pells.css
@@ -15,7 +15,7 @@
   margin-bottom: 0px;
 }
 
-.pell-browser ul.pagination li a,
+/* .pell-browser ul.pagination li a, */
 .navbar-inverse {
   background-image: -webkit-linear-gradient(top, #3c3c55 0%, #226 100%);
   background-image: -o-linear-gradient(top, #3c3c55 0%, #226 100%);
@@ -45,187 +45,6 @@
   opacity: 0.5;
 }
 
-.pell-browser .tab-content,
-.pell-browser .nav-tabs > li > a.active {
-  background-color: #fcfcfc;
-}
-
-.pell-browser .nav-tabs > li > a.active {
-  border-top: 1px solid #e2e2e2;
-  border-right: 1px solid #e2e2e2;
-  border-left: 1px solid #e2e2e2;
-}
-
-/* playlist */
-
-.pell-browser .tab-content {
-  border-bottom: 1px solid #e2e2e2;
-  border-right: 1px solid #e2e2e2;
-  border-left: 1px solid #e2e2e2;
-}
-
-.pell-browser .tab-content li:hover {
-  background-color: #fafaff;
-}
-
-.pell-browser .tab-content ul li .btn.btn-info {
-  background: transparent;
-  border: 0px;
-  color: black;
-}
-
-.pell-browser .tab-content ul li a.btn.btn-info:hover {
-  background: #pink;
-}
-.pell-browser .tab-content ul {
-  margin: 0px;
-  padding: 8px;
-}
-
-.pell-browser .tab-content li a {
-  font-size: 18px;
-  color: #3c3c55;
-}
-
-.pell-browser .tab-content li span a {
-  font-size: 12px; 
-  display: inline-block;
-  margin-left: 17px;
-}
-
-.pell-browser .btn {
-  float: left;
-  margin-right: 7px;
-}
-
-.pell-browser .tab-content li {
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-
-.pell-browser span.bpm {
-  float: right;
-}
-
-
-.pell-paging .paging-container {
-  float: right;
-  padding: 0px;
-}
-
-.pell-paging ul.pagination li a {
-  color: #444;
-}
-
-.pell-paging ul.pagination li.disabled a {
-  color: #999;
-} 
-
-.pell-paging .paging {
-  position: relative;
-  top: 0px;
-  
-  background-color: white;
-  border: 0px;
-}
-
-.pell-paging .paging ul {
-  margin: 0px;
-  font-size: 10px;
-}
-
-.pell-paging .paging div {
-  color: #444;
-  text-align: left;
-  padding-left: 15%;
-}
-
-.pell-browser .nav-tabs .badge {
-  font-size: 9px;
-  font-weight: normal;
-  background-color: brown;
-}
-
-.pell-browser .tab-content ul {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-.pell-browser .tab-content ul li {
-  clear: both;
-  cursor: pointer;
-  margin-left: 0px;
-  margin-right: 0px;
-  padding-left: 8px;
-  padding-right: 8px;
-
-}
-
-.pell-detail,
-.pell-browser .tab-content ul li.selected {
-  background-color: #e9e9e9;
-}
-.pell-browser .tab-content ul li:hover {
-  background-color: #e2e2e2;
-}
-
-
-svg {
-  display: inline-block;
-  width: 400;
-  height: 80;
-}
-
-polyline {
-  stroke: black;
-  stroke-opacity: 0.8;
-  stroke-width:1.5;
-  fill:none;
-  stroke-linecap: round;
-}
-
-.audio-player {
-  height: 90px;
-}
-
-.audio-player .media-body {
-  height: 90px;
-}
-
-.audio-player .playback-scrubber {
-  width: 410px;
-}
-
-.audio-player .bar {
-  opacity: 0.5;
-  height: 80px;
-}
-
-article.audio-player {
-  line-height: 34px;
-  height: 84px;
-  /* padding-bottom: 20px; */
-  margin-bottom:  12px;
-}
-.waveimage {
-  width: 100%;
-  opacity: 1.0;
-}
-
-.play-previous,
-.play-next {
-  display: none;
-}
-
-.audio-player .btn.play {
-  font-size: 42px;
-  margin-top: 20px;
-  width: 60px;
-}
-
-.audio-player h4.media-heading a  {
-  margin-top: 40px;
-  display: inline-block;
-}
 
 .pells-img {
   background-image: url('../images/front-page.jpg');
@@ -235,14 +54,69 @@ article.audio-player {
   background-size: cover;
 }
 
-.gear {
-  float: right;
-  margin: 10px;
+.footer-pad {
+  padding-bottom: 100px;
 }
 
 
-.footer-pad {
-  padding-bottom: 100px;
+.pells-img h1 {
+  color: white;
+  margin-top: 150px;
+  font-size: 60pt;
+  max-width: 440px;
+  text-shadow: 3px 3px black;
+ }
+
+.pells-img h3 {
+  color: antiquewhite;
+  max-width: 440px;
+  text-shadow: 2px 2px black;
+}
+
+.modal .actions-centered > li {
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.modal .nav-tabs > li {
+  margin-bottom: 0px;
+}
+
+.modal .pell-detail .download-list button {
+  margin: 7px;
+}
+
+
+.filter-box {
+  float: none;
+  position:relative;
+  right: 0;
+  top: 0;
+  z-index: 100;
+}
+
+.filter-box li {
+  margin-bottom: 18px;
+}
+
+.filter-box .bpm-slider-container {
+  width: 92%;
+  margin: 0px auto;
+  padding-bottom: 50px;
+}
+
+.filter-box .bpm-title {
+  font-weight: bold;
+}
+
+.filter-box .bpm-title::after {
+  content: ':';
+  margin-right: 12px;
+}
+
+.gear {
+  float: right;
+  margin: 10px;
 }
 
 .bpm-display {
@@ -260,102 +134,5 @@ article.audio-player {
 .slider-container {
   margin-left: 55px;
   padding-top: 4px;
-}
-
-.pells-img h1 {
-  color: white;
-  margin-top: 150px;
-  font-size: 60pt;
-  max-width: 440px;
-  text-shadow: 3px 3px black;
- }
-
-.pells-img h3 {
-  color: antiquewhite;
-  max-width: 440px;
-  text-shadow: 2px 2px black;
-}
-
-.pell-detail {
-  background-color: white;
-  border: 2px solid #aaa;
-  border-radius: 8px;
-  box-shadow: 9px 9px #eee;
-  padding: 0px;
-}
-
-.pell-detail > div {
-  margin: 0px;
-}
-
-.pell-detail h3 {
-  border-bottom: 1px solid #ddd;;
-}
-
-.pell-detail > div > a {
-  border-top: 1px solid #ddd;;
-}
-
-.pell-detail h3,
-.pell-detail > div > a {
-  margin: 0px;
-  text-align: center;
-  padding: 5px;
-  width: 100%;  
-  display: block;
-  color: #347AB7;
-}
-
-.pell-detail .download-list { 
-  padding: 6px;
-  margin: 0px;
-}
-
-.pell-detail .download-list li {
-  margin-bottom: 4px;
-  cursor: default;
-}
-
-.pell-detail .download-list li .ext {
-   text-transform: uppercase;
-   float: right;
-}
-
-.pell-detail .download-list li .nic {
-   text-transform: lowercase;
-   font-size: 12px;
-}
-
-.pell-detail .download-list button {
-  padding: 4px 6px;
-  font-size: 14px;
-  
-}
-
-.modal .actions-centered > li {
-  text-align: center;
-  margin-bottom: 16px;
-}
-
-.modal .nav-tabs > li {
-  margin-bottom: 0px;
-}
-
-.modal .pell-detail .download-list button {
-  margin: 7px;
-}
-
-.pells-page .page-header h2 a {
-  font-size: 14px;
-  display: inline-block;
-  vertical-align: bottom;
-  position: relative;
-  left: -130px;
-}
-
-.pells-page .page-header h2 img {
-  border-radius: 15px;
-  box-shadow: 4px 7px 14px #AAA;
-  margin-right: 18px;
 }
 
