--- a/public/pells/css/pells-browser.css
+++ b/public/pells/css/pells-browser.css
@@ -1,92 +1,3 @@
-.pell-browser .tab-content,
-.pell-browser .nav-tabs > li > a.active {
-  background-color: #fcfcfc;
-}
-
-.pell-browser .nav-tabs > li > a.active {
-  border-top: 1px solid #e2e2e2;
-  border-right: 1px solid #e2e2e2;
-  border-left: 1px solid #e2e2e2;
-}
-
-.pell-browser .tab-content {
-  border-bottom: 1px solid #e2e2e2;
-  border-right: 1px solid #e2e2e2;
-  border-left: 1px solid #e2e2e2;
-}
-
-.pell-browser .tab-content li:hover {
-  background-color: #fafaff;
-}
-
-.pell-browser .tab-content ul li .btn.btn-info {
-  background: transparent;
-  border: 0px;
-  color: black;
-}
-
-.pell-browser .tab-content ul li a.btn.btn-info:hover {
-  background: #pink;
-}
-.pell-browser .tab-content ul {
-  margin: 0px;
-  padding: 8px;
-  min-height: 316px;
-}
-
-.pell-browser .tab-content li a {
-  font-size: 18px;
-  color: #3c3c55;
-}
-
-.pell-browser .tab-content li span a {
-  font-size: 12px; 
-  display: inline-block;
-  margin-left: 17px;
-}
-
-.pell-browser .btn {
-  float: left;
-  margin-right: 7px;
-}
-
-.pell-browser .tab-content li {
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-
-.pell-browser span.bpm {
-  float: right;
-}
-
-.pell-browser .nav-tabs .badge {
-  font-size: 9px;
-  font-weight: normal;
-  background-color: brown;
-}
-
-.pell-browser .tab-content ul {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-.pell-browser .tab-content ul li {
-  clear: both;
-  cursor: pointer;
-  margin-left: 0px;
-  margin-right: 0px;
-  padding-left: 8px;
-  padding-right: 8px;
-
-}
-
-.pell-detail,
-.pell-browser .tab-content ul li.selected {
-  background-color: #e9e9e9;
-}
-.pell-browser .tab-content ul li:hover {
-  background-color: #e2e2e2;
-}
-
 .pells-page .page-header h2 a {
   font-size: 14px;
   display: inline-block;
@@ -100,3 +11,78 @@
   box-shadow: 4px 7px 14px #AAA;
   margin-right: 18px;
 }
+
+.pell-browser .tab-content,
+.pell-browser .nav-tabs > li > a.active {
+  background-color: #fcfcfc;
+}
+
+.pell-browser .nav-tabs > li > a.active {
+  border-top: 1px solid #e2e2e2;
+  border-right: 1px solid #e2e2e2;
+  border-left: 1px solid #e2e2e2;
+}
+
+.pell-browser .nav-tabs .badge {
+  font-size: 9px;
+  font-weight: normal;
+  background-color: brown;
+}
+
+.pell-browser .tab-content {
+  border-bottom: 1px solid #e2e2e2;
+  border-right: 1px solid #e2e2e2;
+  border-left: 1px solid #e2e2e2;
+}
+
+.pell-browser .tab-content ul {
+  margin: 0px;
+  padding: 8px;
+  min-height: 316px;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.pell-browser .tab-content li.pell {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  clear: both;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+
+.pell-browser span.bpm {
+  float: right;
+}
+
+.pell-browser .pell .artist {
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
+  width: 15%;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.pell-browser .pell span.artist a {
+  font-size: 12px; 
+  color: #3c3c55;
+}
+
+.pell-browser .pell .title {
+  width: 70%;
+  margin-left: 5px;
+  padding-left: 5px;
+  display: inline-block;
+  cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.pell-browser .pell .title:hover {
+  background-color: #e2e2e2;
+}
+
