--- a/public/pells/css/pells-detail.css
+++ b/public/pells/css/pells-detail.css
@@ -1,5 +1,7 @@
+
+
 .pell-detail {
-  background-color: white;
+  background-color: #e9e9e9;
   border: 2px solid #aaa;
   border-radius: 8px;
   box-shadow: 9px 9px #eee;
