fixed selected pell

--- a/public/pells/css/pells-browser.css
+++ b/public/pells/css/pells-browser.css
@@ -86,3 +86,17 @@
   background-color: #e2e2e2;
 }
 
+.pells-page .user-search-results a {
+  display: inline-block;
+  margin-left: 18px;
+  color: #999;
+  border: 1px solid;
+  padding: 4px;
+  border-radius: 3px;
+}
+
+.pells-page .user-search-results a:hover {
+  background-color: #777;
+  color: white;
+  text-decoration: none;
+}
