--- a/public/pells/css/pells-detail.css
+++ b/public/pells/css/pells-detail.css
@@ -1,58 +1,39 @@
-
-
-.pell-detail {
-  background-color: #e9e9e9;
-  border: 2px solid #aaa;
-  border-radius: 8px;
-  box-shadow: 9px 9px #eee;
-  padding: 0px;
-}
-
-.pell-detail > div {
-  margin: 0px;
-}
-
-.pell-detail h3 {
-  border-bottom: 1px solid #ddd;;
-}
-
-.pell-detail > div > a {
-  border-top: 1px solid #ddd;;
-}
-
-.pell-detail h3,
-.pell-detail .ccm-link {
-  margin: 0px;
-  text-align: center;
-  padding: 5px;
-  width: 100%;  
-  display: block;
-  color: #347AB7;
-}
-
 .pell-detail .download-list { 
   padding: 6px;
-  margin: 0px;
+  border-left: 1px solid #e2e2e2;
+  border-right: 1px solid #e2e2e2;
+  border-bottom: 1px solid #e2e2e2;
 }
 
-.pell-detail .download-list li {
+.pell-detail li.pell-detail-fake-tab {
+  max-width: 80%;
+}
+
+.pell-detail .download-list li.dl-list {
   margin-bottom: 4px;
   cursor: default;
 }
 
-.pell-detail .download-list li .ext {
+.pell-detail .download-list li a.artist,
+.pell-detail .download-list li a.ccm-link
+{
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+}
+
+.pell-detail .download-list li.dl-list .ext {
    text-transform: uppercase;
    float: right;
 }
 
-.pell-detail .download-list li .nic {
+.pell-detail .download-list li.dl-list .nic {
    text-transform: lowercase;
    font-size: 12px;
 }
 
-.pell-detail .download-list button {
+.pell-detail .download-list li.dl-list button.sm-download {
   padding: 4px 6px;
   font-size: 14px;
-  
 }
 
