init stems/pells description

--- a/public/pells/css/pells-browser.css
+++ b/public/pells/css/pells-browser.css
@@ -12,6 +12,7 @@
   margin-right: 18px;
 }
 
+.pell-detail-description,
 .pells-page .tab-content,
 .pells-page .nav-tabs > li.active a {
   background-color: #fcfcfc;
