this build is broken

--- a/public/stems/css/stems-browser.css
+++ b/public/stems/css/stems-browser.css
@@ -27,6 +27,7 @@
 
 .stems-browser .stems-tags-widget {
   margin-left: 25px;
+  margin-bottom: 80px;
   padding: 15px 5px;
 }
 .stems-browser .stems-tags-widget .input-group {
