maybe better err handling

--- a/public/stems/css/stems.css
+++ b/public/stems/css/stems.css
@@ -50,3 +50,9 @@
   text-shadow: 2px 2px black;
 }
 
+.query-options-box {
+  width: 230px;
+  position: absolute;
+  right: 10px;
+  z-index: 100;
+}
