--- a/public/stems/css/stems-browser.css
+++ b/public/stems/css/stems-browser.css
@@ -30,6 +30,7 @@
   margin-bottom: 80px;
   padding: 15px 5px;
 }
+
 .stems-browser .stems-tags-widget .input-group {
   width: 220px;
   margin-bottom: 0px;
@@ -97,6 +98,7 @@
   border-radius: 7px ;
   padding: 9px;
   background-color: rgba(246, 249, 237, 0.22);
+  margin-bottom: 30px;
 }
 
 .stems-browser .stems-listing > li .stem-name {
