--- a/public/pells/css/pells-detail.css
+++ b/public/pells/css/pells-detail.css
@@ -1,3 +1,5 @@
+/* pells detail css */
+
 .pell-detail .download-list { 
   padding: 6px;
   border-left: 1px solid #e2e2e2;
@@ -34,6 +36,21 @@
 .pell-detail .download-list li.dl-list .ext {
    text-transform: uppercase;
    float: right;
+   width: 42px;
+   text-align: center;
+   color: #9d9d9d;
+   border: 1px solid #9d9d9d;
+   font-size: 11px;
+   border-radius: 4px;
+}
+
+.pell-detail .download-list li.dl-list .playtime {
+  float: right;
+  color: #910101;
+  font-size: 11px;
+  margin-top: 2px;
+  margin-right: 4px;
+  font-color: 
 }
 
 .pell-detail .download-list li.dl-list .nic {
