--- a/public/stems/css/stems-tags.css
+++ b/public/stems/css/stems-tags.css
@@ -49,14 +49,17 @@
   display: inline-block;  
 }
 
+.bounding-fixed {
+  position: fixed;
+}
+
 .stems-browser .selected-tags {
   padding: 8px;
-  min-height: 50px;
-  position: fixed;
   background-color: #9AB52F;
-  z-index: 200;
+  min-height: 50px;
   width: 100%;
   text-align: center;
+  z-index: 200;
 }
 
 .stems-browser .selected-tags .btn-tag {
@@ -81,12 +84,6 @@
 
 .stems-browser .selected-tags .btn-tag .fa-2x {
   font-size: 13px;
-}
-
-.stems-tags-bumper {
-  width: 100%;
-  height: 2px;
-  margin-top: 60px;
 }
 
 .stems-tags-widget .related-tags ul.tags-list {
